--- a/practice.html
+++ b/practice.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon.com. Spend less. Smile more.</title>
+    <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="practice.css">
 </head>
 
 <body>
@@ -93,7 +93,6 @@
         </div>
 
     </div>
-
 
     <div class="shop-section">
         <div class="box">
@@ -200,12 +199,11 @@
                 <h2>Deals in PCs</h2>
                 <div class="singleImageDiv">
                     <div class="box-img redColorImage"
-                        style="background-image: url('pcs.jpg');background-position: center;width: 20vw;"></div>
+                        style="background-image: url('pcs.jpg');background-position: center;"></div>
                     <p class="hover-cursor colorPara">See more</p>
                 </div>
             </div>
         </div>
-        <!-- 
         <div class="box">
             <div class="box-content">
                 <h2>Toys under $25</h2>
@@ -595,220 +593,49 @@
                 <a href="">Amazon Science</a>
             </ul>
             <ul>
-                <p>Make Money with Us</p>
-                <a href="">Sell products on Amazon</a>
-                <a href="">Sell on Amazon Business</a>
-                <a href="">Sell apps on Amazon</a>
-                <a href="">Become an Affiliate</a>
-                <a href="">Advertise Your Products</a>
-                <a href="">Self-Publish with Us</a>
-                <a href="">Host an Amazon Hub</a>
-                <a href="">> See More Make Money with us</a>
+                <p>Get to Know Us</p>
+                <a href="">Careers</a>
+                <a href="">Blog</a>
+                <a href="">About Amazon</a>
+                <a href="">Investor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Science</a>
             </ul>
             <ul>
-                <p>Amazon Payment Products</p>
-                <a href="">Amazon Business Card</a>
-                <a href="">Shop with Points</a>
-                <a href="">Reload Your Balance</a>
-                <a href="">Amazon Currency Converter</a>
+                <p>Get to Know Us</p>
+                <a href="">Careers</a>
+                <a href="">Blog</a>
+                <a href="">About Amazon</a>
+                <a href="">Investor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Science</a>
             </ul>
             <ul>
-                <p>Let Us Help You</p>
-                <a href="">Amazon and COVID-19</a>
-                <a href="">Your Account</a>
-                <a href="">Your Orders</a>
-                <a href="">Shipping Rates & Policies</a>
-                <a href="">Returns & Replacements</a>
-                <a href="">Manage Your Content and Devices</a>
-                <a href="">Help</a>
+                <p>Get to Know Us</p>
+                <a href="">Careers</a>
+                <a href="">Blog</a>
+                <a href="">About Amazon</a>
+                <a href="">Investor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Science</a>
             </ul>
         </div>
 
         <div class="foot-panel3">
-            <div class="foot-panelInner3">
-                <div class="logo"></div>
-                <div class="footPanelBox lang">
-                    <img src="./web.png" alt="">
-                    <p>English</p>
-                </div>
-                <div class="footPanelBox">
-                    <p><span>$</span>USD - U.S. Dollar</p>
-                </div>
-                <div class="footPanelBox">
-                    <img src="./united-26177_640.png" alt="">
-                    <p>United States</p>
-                </div>
-            </div>
+            <div class="logo"></div>
         </div>
 
-        <div class="footPanel5Outsider">
-            <div class="foot-panel5">
-                <div class="footPanel5InnerBox">
-                    <h5>Amazon Music</h5>
-                    <p>Stream millions</p>
-                    <p>of songs</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Amazon Ads</h5>
-                    <p>Reach customers</p>
-                    <p>wherever they </p>
-                    <p>spend their time</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>6pm</h5>
-                    <p>Score deals </p>
-                    <p>on fashion </p>
-                    <p>brands</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>AbeBooks</h5>
-                    <p>Books, art</p>
-                    <p>& collectibles</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>ACX</h5>
-                    <p>Audiobook Publishing</p>
-                    <p>Made Easy</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Sell on Amazon</h5>
-                    <p>Start a Selling</p>
-                    <p>Account</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Amazon</h5>
-                    <h5>Business</h5>
-                    <p>Everything</p>
-                    <p>For</p>
-                    <p>Your</p>
-                    <p>Business</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>AmazonGlobal</h5>
-                    <p>Ship Orders</p>
-                    <p>Internationally</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Home Services</h5>
-                    <p>Experienced Pros</p>
-                    <p>Happiness</p>
-                    <p>Guarantee</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Amazon Web Services</h5>
-                    <p>Scalable Cloud</p>
-                    <p>Computing</p>
-                    <p>Services</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Audible</h5>
-                    <p>Listen to Books &</p>
-                    <p>Original</p>
-                    <p>Audio</p>
-                    <p>Performances</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Box Office Mojo</h5>
-                    <p>Find Movie</p>
-                    <p>Box Office Data</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Goodreads</h5>
-                    <p>Book reviews </p>
-                    <p>&</p>
-                    <p>recommendations</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>IMDb</h5>
-                    <p>Movies, TV</p>
-                    <p>& Celebrities</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>IMDbPro</h5>
-                    <p>Get Info</p>
-                    <p>Entertainment</p>
-                    <p>Professionals</p>
-                    <p>Need</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Kindle Direct Publishing</h5>
-                    <p>Indie Digital &</p>
-                    <p>Print Publishing</p>
-                    <p>Made Easy</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Prime Video</h5>
-                    <h5>Direct</h5>
-                    <p>Video</p>
-                    <p>Distribution</p>
-                    <p>Made Easy</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Shopbop</h5>
-                    <p>Designer</p>
-                    <p>Fashion Brands</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Woot!</h5>
-                    <p>Deals and</p>
-                    <p>Shenanigans</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Zappos</h5>
-                    <p>Shoes & </p>
-                    <p>Clothing</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Ring</h5>
-                    <p>Smart Home</p>
-                    <p>Security</p>
-                    <p>Systems</p>
-                </div>
+        <div class="foot-panel4">
+            <div class="pages">
+                <a href="">Conditions of Use</a>
+                <a href="">Privacy Notice</a>
+                <a href="">Your Ads Privacy Choices</a>
             </div>
-            <div class="footPanelSecondPart">
-                <div class="footPanel5InnerBox">
-                    <h5>eero WiFi</h5>
-                    <p>Stream 4k Video</p>
-                    <p>in Every Room </p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Blink</h5>
-                    <p>Smart Security</p>
-                    <p>for Every</p>
-                    <p>Home</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Neighbors App</h5>
-                    <p>Real-Time Crime</p>
-                    <p>& Safety Alerts</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>Amazon Subscription</h5>
-                    <h5>Boxes</h5>
-                    <p>Top subscription boxes</p>
-                    <p>-right to your door</p>
-                </div>
-                <div class="footPanel5InnerBox">
-                    <h5>PillPack</h5>
-                    <p>Pharmacy</p>
-                    <p>Simplified</p>
-                </div>
-            </div>
-
-            <div class="foot-panel4">
-                <div class="pages">
-                    <a href="">Conditions of Use</a>
-                    <a href="">Privacy Notice</a>
-                    <a href="">Customer Health Data Privacy Disclosure</a>
-                    <a href="">Your Ads Privacy Choices</a>
-                </div>
-                <div class="copyright">
-                    &#169; 1996-2024, Amazon.com, Inc. or its affilliates
-                </div>
+            <div class="copyright">
+                1996-2024, Amazon.com, Inc. or its affilliates
             </div>
         </div>
-
-    </footer> -->
+    </footer>
 </body>
 
 </html>
