--- a/index.html
+++ b/index.html
@@ -200,18 +200,19 @@
                 <h2>Deals in PCs</h2>
                 <div class="singleImageDiv">
                     <div class="box-img redColorImage"
-                        style="background-image: url('pcs.jpg');background-position: center;width: 20vw;"></div>
+                        style="background-image: url('pcs.jpg');background-position: center;"></div>
                     <p class="hover-cursor colorPara">See more</p>
                 </div>
             </div>
         </div>
-        <!-- 
+
         <div class="box">
             <div class="box-content">
                 <h2>Toys under $25</h2>
                 <div class="singleImageDiv">
                     <div class="box-img redColorImage"
-                        style="background-image: url('ToysUnder$25.jpg ');background-position: center;"></div>
+                        style="background-image: url('ToysUnder$25.jpg ');background-position: center; ">
+                    </div>
                     <p class="hover-cursor colorPara">Shop now</p>
                 </div>
             </div>
@@ -221,7 +222,8 @@
                 <h2>Beauty steals under $25</h2>
                 <div class="singleImageDiv">
                     <div class="box-img redColorImage"
-                        style="background-image: url('BeautyStealsUnder$25.jpg'); background-position: center;"></div>
+                        style="background-image: url('BeautyStealsUnder$25.jpg'); background-position: center; ">
+                    </div>
                     <p class="hover-cursor colorPara">Shop now</p>
                 </div>
             </div>
@@ -265,25 +267,25 @@
                 <div class="allBoxes">
                     <div class="boxes">
                         <div class="boxes-img"
-                            style="height: 105px; background-image: url('baskets&hampers.jpg');background-position: center; background-size: cover;">
+                            style="background-image: url('baskets&hampers.jpg');background-position: center; background-size: cover;">
                         </div>
                         <p>Baskets & hampers</p>
                     </div>
                     <div class="boxes">
                         <div class="boxes-img"
-                            style="height: 105px; background-image: url('Hardware.jpg');background-position: center; background-size: cover;">
+                            style="background-image: url('Hardware.jpg');background-position: center; background-size: cover;">
                         </div>
                         <p>Hardware</p>
                     </div>
                     <div class="boxes">
                         <div class="boxes-img"
-                            style="height: 105px; background-image: url('AccentFurniture.jpg');background-position: center; background-size: cover;">
+                            style="background-image: url('AccentFurniture.jpg');background-position: center; background-size: cover;">
                         </div>
                         <p>Accent furniture</p>
                     </div>
                     <div class="boxes">
                         <div class="boxes-img"
-                            style="height: 105px; background-image: url('Wallpaper&paint.jpg');background-position: center; background-size: cover;">
+                            style="background-image: url('Wallpaper&paint.jpg');background-position: center; background-size: cover;">
                         </div>
                         <p>Wallpaper & paint</p>
                     </div>
@@ -292,6 +294,7 @@
                 <p class="hover-cursor">Shop home products</p>
             </div>
         </div>
+
         <div class="rowBox">
             <div class="box-contentRow">
                 <h2>Best Sellers in Cell Phones & Accessories</h2>
@@ -313,6 +316,7 @@
                 </div>
             </div>
         </div>
+
         <div class="box">
             <div class="box-content">
                 <h2>Greate prices on shoes</h2>
@@ -389,6 +393,7 @@
                 <p class="hover-cursor">See more</p>
             </div>
         </div>
+
         <div class="box">
             <div class="box-content">
                 <h2>Fantastic Finds for Home</h2>
@@ -422,6 +427,7 @@
                 <p class="hover-cursor">See more</p>
             </div>
         </div>
+
         <div class="rowBox">
             <div class="box-contentRow">
                 <h2>Best Sellers in Sports & Outdoors</h2>
@@ -482,6 +488,7 @@
                 </div>
             </div>
         </div>
+
         <div class="box">
             <div class="box-content">
                 <h2>A whole new way to work</h2>
@@ -497,7 +504,7 @@
                 <h2>Player's paradise starts here</h2>
                 <div class="singleImageDiv">
                     <div class="box-img redColorImage"
-                        style="height: 277px; background-image: url('videoGames.jpg');background-position: center;">
+                        style=" background-image: url('videoGames.jpg');background-position: center;">
                     </div>
                     <p class="hover-cursor colorPara">Shop video games</p>
                 </div>
@@ -542,25 +549,25 @@
                 <div class="allBoxes">
                     <div class="boxes">
                         <div class="boxes-img"
-                            style="height: 100px;background-image: url('Desktops.jpg');background-position: center; background-size: cover;">
+                            style="background-image: url('Desktops.jpg');background-position: center; background-size: cover;">
                         </div>
                         <p>Desktops</p>
                     </div>
                     <div class="boxes">
                         <div class="boxes-img"
-                            style="height: 100px;background-image: url('Laptops.jpg');background-position: center; background-size: cover;">
+                            style="background-image: url('Laptops.jpg');background-position: center; background-size: cover;">
                         </div>
                         <p>Laptops</p>
                     </div>
                     <div class="boxes">
                         <div class="boxes-img"
-                            style="height: 100px;background-image: url('HardDrives.jpg');background-position: center; background-size: cover;">
+                            style="background-image: url('HardDrives.jpg');background-position: center; background-size: cover;">
                         </div>
                         <p>Hard Drives</p>
                     </div>
                     <div class="boxes">
                         <div class="boxes-img"
-                            style="height: 100px;background-image: url('PCAccessories.jpg');background-position: center; background-size: cover;">
+                            style="background-image: url('PCAccessories.jpg');background-position: center; background-size: cover;">
                         </div>
                         <p>PC Accessories</p>
                     </div>
@@ -623,6 +630,7 @@
                 <a href="">Help</a>
             </ul>
         </div>
+
 
         <div class="foot-panel3">
             <div class="foot-panelInner3">
@@ -808,7 +816,7 @@
             </div>
         </div>
 
-    </footer> -->
+    </footer>
 </body>
 
 </html>
