Add design for mobile view

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="navbar">
 
             <div class="nav-logo border">
-                <div class="logo">
+                <div class="logox">
                 </div>
             </div>
 
-            <div class="nav-address border">
+            <div class="nav-address border mobileView">
                 <p class="add-first">Deliver to</p>
                 <div class="add-icon">
                     <i class="fa-sharp fa-solid fa-location-dot"></i>
@@ -41,19 +41,41 @@
                 </div>
             </div>
 
-            <div class="nav-signin border">
+            <div class="nav-signin border mobileView">
                 <p><span>Hello, sign in</span></p>
                 <p class="nav-second">Account & Lists</p>
             </div>
 
-            <div class="nav-return border">
+            <div class="nav-return border mobileView">
                 <p><span>Returns</span></p>
                 <p class="nav-second">& Orders</p>
             </div>
 
-            <div class="nav-cart border">
+            <div class="nav-cart border mobileView">
                 <i class="fa-solid fa-cart-shopping"></i>
                 Cart
+            </div>
+            <div class="mobileViewDisplay">
+
+                <ul>
+                    <li>
+                        <i class="fa-solid fa-house"></i>
+                        <p>Home</p>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-user"></i>
+                        <p>User</p>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <p>Cart</p>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-bars"></i>
+                        <p>Menu</p>
+                    </li>
+                </ul>
+
             </div>
         </div>
 
@@ -69,7 +91,7 @@
                 <p class="hover-cursor">Gift Cards</p>
                 <p class="hover-cursor">Sell</p>
             </div>
-            <div class="panel-deals hover-cursor">
+            <div class="panel-deals hover-cursor mobileView">
                 Shop deal in Electronics
             </div>
         </div>
@@ -83,7 +105,7 @@
             <img src="hero_image3.jpg" alt="">
             <img src="hero_image4.jpg" alt="">
             <img src="hero_image5.jpg" alt="">
-            <div class="hero-msg">
+            <div class="hero-msg mobileView">
                 <div class="hero-msg-inner">
                     <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local
                         delivery. <a class="hover-cursor">Click here to go to
@@ -579,7 +601,7 @@
         </div>
     </div>
 
-    <div class="rowBoxSignin">
+    <div class="rowBoxSignin mobileView">
         <div class="rowBoxSigninInner">
             <p>See personalized recommendations</p>
             <button>Sign in</button>
@@ -588,11 +610,11 @@
     </div>
 
     <footer>
-        <div class="foot-panel1">
+        <div class="foot-panel1 mobileView">
             Back to Top
         </div>
 
-        <div class="foot-panel2">
+        <div class="foot-panel2 mobileView">
             <ul>
                 <p>Get to know us</p>
                 <a href="">Careers</a>
@@ -633,7 +655,7 @@
         </div>
 
 
-        <div class="foot-panel3">
+        <div class="foot-panel3 mobileView">
             <div class="foot-panelInner3">
                 <div class="logo"></div>
                 <div class="footPanelBox lang">
@@ -650,7 +672,7 @@
             </div>
         </div>
 
-        <div class="footPanel5Outsider">
+        <div class="footPanel5Outsider mobileView">
             <div class="foot-panel5">
                 <div class="footPanel5InnerBox">
                     <h5>Amazon Music</h5>
@@ -819,5 +841,6 @@
 
     </footer>
 </body>
+<script src="https://kit.fontawesome.com/9578b2e9b9.js" crossorigin="anonymous"></script>
 
 </html>
