Changes do in the box for mobile view

--- a/index.html
+++ b/index.html
@@ -138,26 +138,34 @@
                 <h2>Refresh your space</h2>
                 <div class="allBoxes">
                     <div class="boxes">
-                        <div class="boxes-img"
-                            style="background-image: url('Dining.jpg');background-position: center; background-size: cover;">
+                        <div class="background-img">
+                            <div class="boxes-img"
+                                style="background-image: url('Dining.jpg');background-position: center; background-size: cover;">
+                            </div>
                         </div>
                         <p>Dining</p>
                     </div>
                     <div class="boxes">
-                        <div class="boxes-img"
-                            style="background-image: url('box1_image.jpg');background-position: center; background-size: cover;">
+                        <div class="background-img">
+                            <div class="boxes-img"
+                                style="background-image: url('box1_image.jpg');background-position: center; background-size: cover;">
+                            </div>
                         </div>
                         <p>Home</p>
                     </div>
                     <div class="boxes">
-                        <div class="boxes-img"
-                            style="background-image: url('Kitchen.jpg');background-position: center; background-size: cover;">
+                        <div class="background-img">
+                            <div class="boxes-img"
+                                style="background-image: url('Kitchen.jpg');background-position: center; background-size: cover;">
+                            </div>
                         </div>
                         <p>Kitchen</p>
                     </div>
                     <div class="boxes">
-                        <div class="boxes-img"
-                            style="background-image: url('HealthAndBeauty.jpg');background-position: center; background-size: cover;">
+                        <div class="background-img">
+                            <div class="boxes-img"
+                                style="background-image: url('HealthAndBeauty.jpg');background-position: center; background-size: cover;">
+                            </div>
                         </div>
                         <p>Health and Beauty</p>
                     </div>
