--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <a href="#" class="hover-cursor">See more</a>
             </div>
         </div>
-        <div class="box">
+        <div class="box singlePicBox">
             <div class="box-content">
                 <h2>Deals in PCs</h2>
                 <div class="singleImageDiv">
@@ -267,7 +267,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box singlePicBox">
             <div class="box-content">
                 <h2>Toys under $25</h2>
                 <div class="singleImageDiv">
@@ -278,7 +278,7 @@
                 </div>
             </div>
         </div>
-        <div class="box">
+        <div class="box singlePicBox">
             <div class="box-content">
                 <h2>Beauty steals under $25</h2>
                 <div class="singleImageDiv">
@@ -394,7 +394,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box singlePicBox">
             <div class="box-content">
                 <h2>Greate prices on shoes</h2>
                 <div class="singleImageDiv">
@@ -590,7 +590,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box singlePicBox">
             <div class="box-content">
                 <h2>A whole new way to work</h2>
                 <div class="singleImageDiv">
@@ -600,7 +600,7 @@
                 </div>
             </div>
         </div>
-        <div class="box">
+        <div class="box singlePicBox">
             <div class="box-content">
                 <h2>Player's paradise starts here</h2>
                 <div class="singleImageDiv">
